fixed safari mobile spacing issue

--- a/styles/SSCommon.css
+++ b/styles/SSCommon.css
@@ -597,7 +597,7 @@ h4 {
         padding-top: 10vw;
         padding-bottom: 10vw;
         flex-direction: column;
-        height: 100%;
+        /*height: 100%;*/
     }
 
     .download_section div h3{
